--- a/index.css
+++ b/index.css
@@ -291,6 +291,7 @@ marquee {
     margin-left: 10px;
     margin-right: 10px;
     text-align: center;
+    font-size: 15px;
   }
 
   .sec-song {
@@ -298,6 +299,7 @@ marquee {
     margin-left: 10px;
     margin-right: 10px;
     text-align: center;
+    font-size: 15px;
   }
 
   audio {
