--- a/index.css
+++ b/index.css
@@ -321,6 +321,7 @@ marquee {
     margin-right: auto;
     left: 0;
     right: 0;
+    font-size: 15px;
   }
 
   .sec-song {
@@ -330,6 +331,7 @@ marquee {
     margin-right: auto;
     left: 0;
     right: 0;
+    font-size: 15px;
   }
 
   audio {
@@ -352,12 +354,14 @@ marquee {
     width: initial;
     margin-left: 10px;
     margin-right: 10px;
+    font-size: 15px;
   }
 
   .sec-song {
     width: initial;
     margin-left: 10px;
     margin-right: 10px;
+    font-size: 15px;
   }
 
   audio {
@@ -377,12 +381,14 @@ marquee {
     width: initial;
     margin-left: 10px;
     margin-right: 10px;
+    font-size: 15px;
   }
 
   .sec-song {
     width: initial;
     margin-left: 10px;
     margin-right: 10px;
+    font-size: 15px;
   }
 
   audio {
