--- a/index.css
+++ b/index.css
@@ -118,8 +118,7 @@ footer button:nth-child(4) {
   background-color: rgb(138, 88, 52);
   padding: 20px 15px;
   border-radius: 30px 30px 10px 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-bottom: 10px;
   display: block;
   width: 35%;
   margin-left: auto;
@@ -131,7 +130,7 @@ footer button:nth-child(4) {
 .first-song span {
   background-color: rgb(24, 103, 250);
   color: #fff;
-  padding: 8px 10px;
+  padding: 10px 12px;
   border-radius: 10px 15px;
 }
 
@@ -151,12 +150,8 @@ footer button:nth-child(4) {
   -webkit-tap-highlight-color: transparent;
 }
 
-.btn:hover {
-  background-color: rgb(255, 182, 182);
-}
-
 .btn:active {
-  background-color: rgb(218, 164, 164);
+  background-color: rgba(204, 114, 114, 0.658);
 }
 
 .sec-song {
@@ -175,7 +170,7 @@ footer button:nth-child(4) {
 .sec-song span {
   background-color: rgba(0, 0, 0, 0.411);
   color: #fff;
-  padding: 8px 10px;
+  padding: 10px 12px;
   border-radius: 10px 15px;
 }
 
@@ -184,10 +179,13 @@ footer button:nth-child(4) {
   user-select: none;
   color: #fff;
   padding: 12px 25px;
+  margin: 8px;
   text-align: center;
   background-color: rgba(71, 119, 190, 0.514);
   border-radius: 9px;
   border: 0.5px solid rgb(13, 199, 206);
+  -webkit-tap-highlight-color: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .fa:active {
