--- a/index.css
+++ b/index.css
@@ -131,6 +131,7 @@ footer button:nth-child(4) {
   background-color: rgb(24, 103, 250);
   color: #fff;
   padding: 10px 12px;
+  line-height: 35px;
   border-radius: 10px 15px;
 }
 
@@ -171,6 +172,7 @@ footer button:nth-child(4) {
   background-color: rgba(0, 0, 0, 0.411);
   color: #fff;
   padding: 10px 12px;
+  line-height: 35px;
   border-radius: 10px 15px;
 }
 
@@ -190,37 +192,6 @@ footer button:nth-child(4) {
 
 .fa:active {
   background-color: rgba(122, 151, 247, 0.205);
-}
-
-#playlist {
-  list-style-type: none;
-  text-align: center;
-  padding: 10px;
-}
-
-li {
-  width: 100%;
-  margin-top: 10px;
-  font-weight: bold;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-li:nth-child(13) {
-  border-bottom: 2px solid #fff;
-}
-
-#playlist li a {
-  color: #bbb;
-  text-decoration: none;
-  -webkit-tap-highlight-color: none;
-  -webkit-tap-highlight-color: transparent;
-}
-
-#playlist .current-song a {
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
 }
 
 audio {
@@ -353,6 +324,22 @@ marquee {
     font-size: 15px;
   }
 
+  p {
+    margin: 65px 5px;
+    width: initial;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    background-color: cornflowerblue;
+    color: purple;
+    text-align: center;
+    padding: 25px;
+    border-radius: 30px 30px 10px 10px;
+    align-items: center;
+  }
+
   audio {
     width: 50%;
     display: block;
@@ -385,6 +372,22 @@ marquee {
     right: 0;
     font-size: 16px;
   }
+
+p {
+  margin: 65px 5px;
+  width: 60%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  background-color: cornflowerblue;
+  color: purple;
+  text-align: center;
+  padding: 25px;
+  border-radius: 30px 30px 10px 10px;
+  align-items: center;
+}
 
   audio {
     width: 40%;
