--- a/index.css
+++ b/index.css
@@ -203,7 +203,7 @@ audio {
 audio::-webkit-media-controls-play-button {
   color: #fff;
   border-radius: 50%;
-  background-color: rgba(13, 73, 184, 0.493);
+  background-color: rgba(168, 168, 250, 0.719);
 }
 
 audio::-webkit-media-controls-timeline-container {
@@ -266,13 +266,13 @@ audio::-webkit-media-controls-toggle-closed-captions-button,  */
 }
 
 .music-player #playlist li:nth-child(1) {
-border-top-left-radius: 12px;
-border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
 
 .music-player #playlist li:nth-child(6) {
-border-bottom-left-radius: 16px;
-border-bottom-right-radius: 16px;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
 }
 
 #playlist li a {
@@ -295,7 +295,7 @@ border-bottom-right-radius: 16px;
 
 #playlist .current-song a {
   font-size: medium;
-    color:rgb(1, 243, 252);
+  color: rgb(1, 243, 252);
 }
 
 @media only screen and (orientation: portrait) {
@@ -314,7 +314,7 @@ border-bottom-right-radius: 16px;
   }
 
   audio {
-    width: 60%;
+    width: initial;
     display: block;
     margin: 20px 10px;
     margin-left: auto;
@@ -323,7 +323,7 @@ border-bottom-right-radius: 16px;
     right: 0;
   }
 
-  footer button { 
+  footer button {
     font-size: small;
   }
 }
@@ -334,21 +334,25 @@ border-bottom-right-radius: 16px;
 /* Extra small devices (phones, 600px and down)  */
 @media only screen and (max-width: 600px) {
   .first-song {
-    width: initial;
-    margin-left: 10px;
-    margin-right: 10px;
+    width: 80%;
     font-size: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
   }
 
   .sec-song {
-    width: initial;
-    margin-left: 10px;
-    margin-right: 10px;
+    width: 80%;
     font-size: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
   }
 
   audio {
-    width: 70%;
+    width: 75%;
     display: block;
     margin: 20px 10px;
     margin-left: auto;
@@ -357,25 +361,50 @@ border-bottom-right-radius: 16px;
     right: 0;
   }
 
-  footer button { 
+  footer button {
     font-size: small;
+  }
+
+  .music-player #playlist .current-song {
+    font-size: 18px;
+  }
+
+  .music-player #playlist li {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    /* font-size: medium; */
+  }
+
+  .music-player #playlist li a {
+    font-size: 14px;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .first-song {
-    width: initial;
+    width: 75%;
     margin-left: 10px;
     margin-right: 10px;
     font-size: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
   }
 
   .sec-song {
-    width: initial;
+    width: 75%;
     margin-left: 10px;
     margin-right: 10px;
     font-size: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
   }
 
   p {
@@ -395,7 +424,7 @@ border-bottom-right-radius: 16px;
   }
 
   audio {
-    width: initial;
+    width: 50%;
     display: block;
     margin: 20px 10px;
     margin-left: auto;
@@ -404,8 +433,25 @@ border-bottom-right-radius: 16px;
     right: 0;
   }
 
-  footer button { 
+  footer button {
     font-size: medium;
+  }
+
+  .music-player #playlist li {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    font-size: medium;
+  }
+
+  .music-player #playlist li a {
+    font-size: medium;
+  }
+
+  .music-player #playlist .current-song {
+    font-size: larger;
   }
 }
 
@@ -457,8 +503,25 @@ border-bottom-right-radius: 16px;
     right: 0;
   }
 
-  footer button { 
+  footer button {
     font-size: medium;
+  }
+
+  .music-player #playlist li {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    font-size: medium;
+  }
+
+  .music-player #playlist li a {
+    font-size: medium;
+  }
+
+  .music-player #playlist .current-song {
+    font-size: larger;
   }
 }
 
@@ -492,7 +555,7 @@ border-bottom-right-radius: 16px;
     right: 0;
   }
 
-  footer button { 
+  footer button {
     font-size: medium;
   }
 }
@@ -527,7 +590,7 @@ border-bottom-right-radius: 16px;
     right: 0;
   }
 
-  footer button { 
+  footer button {
     font-size: medium;
   }
 }
