--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ header h2 {
 
 p {
   margin: 65px 5px;
-  background-color: rgb(70, 104, 167);
+  background-color: rgb(38, 67, 121);
   color: rgb(250, 154, 250);
   text-align: center;
   padding: 25px;
@@ -42,11 +42,11 @@ p {
 
 p span {
   float: right;
-  background-color: rgb(70, 104, 167);
+  background-color: rgb(38, 67, 121);
   padding: 12px 25px;
   border-radius: 0 0 20px 20px;
-  border-bottom: 2px solid darkblue;
-  color: #ffffff;
+  border-bottom: 2px solid rgb(151, 151, 165);
+  color: #f56868;
 }
 
 p kbd {
@@ -127,14 +127,6 @@ footer button:nth-child(1) {
   margin-right: auto;
   left: 0;
   right: 0;
-}
-
-.first-song span {
-  background-color: rgb(24, 103, 250);
-  color: #fff;
-  padding: 10px 12px;
-  line-height: 35px;
-  border-radius: 10px 15px;
 }
 
 .btn {
@@ -304,7 +296,7 @@ audio::-webkit-media-controls-toggle-closed-captions-button,  */
   color: rgb(147, 218, 241);
   margin-left: 15px;
   border-bottom: 2px solid rgba(202, 31, 31, 0.918);
-  border-radius: 20px 0;
+  /* border-radius: 20px 0; */
   padding: 8px 5px;
   width: fit-content;
 }
@@ -316,6 +308,20 @@ div.copyright {
   text-align: center;
   color: #fff;
   font-size: small;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+div.about-text img {
+  width: 85px;
+  height: 105px;
+  border-radius: 10px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  border: 2px dashed rgb(146, 166, 255);
+  margin: 5px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media only screen and (orientation: portrait) {
@@ -331,6 +337,20 @@ div.copyright {
     margin-left: 10px;
     margin-right: 10px;
     text-align: center;
+  }
+
+  #select {
+    width: initial;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+    background-color: rgba(86, 148, 199, 0.877);
+    color: aliceblue;
+    padding: 10px 12px;
+    line-height: 35px;
+    border-radius: 10px 15px;
+    height: 35px;
+    border: none;
   }
 
   audio {
@@ -435,8 +455,8 @@ div.copyright {
     margin-right: auto;
     left: 0;
     right: 0;
-    background-color: cornflowerblue;
-    color: purple;
+    background-color: rgb(38, 67, 121);
+    color: rgb(250, 154, 250);
     text-align: center;
     padding: 25px;
     border-radius: 30px 30px 10px 10px;
@@ -505,8 +525,8 @@ div.copyright {
     margin-right: auto;
     left: 0;
     right: 0;
-    background-color: cornflowerblue;
-    color: purple;
+    background-color: rgb(38, 67, 121);
+    color: rgb(250, 154, 250);
     text-align: center;
     padding: 25px;
     border-radius: 30px 30px 10px 10px;
