--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
   background-color: #222;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    overflow: scroll;
 }
 
 ::selection {
@@ -136,7 +137,7 @@ footer button:nth-child(1) {
 }
 
 .first-song {
-  margin-top: 65px;
+  margin-top: -50px;
   background-color: rgba(44, 97, 95, 0.741);
   padding: 20px 15px;
   border: 2px solid #24faf3bd;
@@ -199,6 +200,7 @@ footer button:nth-child(1) {
   margin-right: auto;
   left: 0;
   right: 0;
+  margin-bottom: 100px;
 }
 
 .sec-song span {
